--- a/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/recruit.html
@@ -1,5 +1,5 @@
 <!--#include virtual="./head.html" -->
-<include file="../public/themes/RY/icr/head.html" />
+<include file="./themes/RY/icr/head.html" />
 <div class="main-img">
     <img src="/themes/RY/icr/imgs/banner5.jpg" />
 </div>
@@ -23,6 +23,7 @@
                                 <div>职位描述</div>
                             </div>
                             <div class="desc">
+                                <div class="div-hidden div-blue"></div>
                                 <div class="content">
                                     <?=$brief_intro[0]?>
                                 </div>
@@ -46,6 +47,7 @@
                                 <div>职位描述</div>
                             </div>
                             <div class="desc">
+                                <div class="div-hidden div-red"></div>
                                 <div class="content">
                                     <?=$brief_intro[1]?>
                                 </div>
@@ -70,6 +72,7 @@
                                 <div>职位描述</div>
                             </div>
                             <div class="desc">
+                                <div class="div-hidden div-orange"></div>
                                 <div class="content">
                                     <?=$brief_intro[2]?>
                                 </div>
@@ -83,5 +86,5 @@
         </div>
     </div>
 </div>
-<include file="../public/themes/RY/icr/foot.html" />
+<include file="./themes/RY/icr/foot.html" />
 <!--#include virtual="./foot.html" -->
