--- a/thinkcmf-5.0.180626/public/themes/RY/icr/user_agreement.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/user_agreement.html
@@ -1,4 +1,4 @@
-<include file="../public/themes/RY/icr/head.html" />
+<include file="./themes/RY/icr/head.html" />
 <div class="main-img">
     <img src="/themes/RY/icr/imgs/banner8.jpg" />
 </div>
@@ -6,7 +6,7 @@
     <h1>I CAN READ 用户协议</h1>
     <div class="h2">个人信息隐私保护政策</div>
     <div class="user-agreement-count" style="white-space:pre-line;margin: 0 auto;
-    width: 500px;">
+    width: 1100px;">
        隐私条款（请认真阅读以下内容）
 
 1.您的个人资料
@@ -149,4 +149,4 @@ READ 网不承担任何责任。
 12.3 本协议中的标题仅为方便而设，在解释本协议时应被忽略。
     </div>
 </div>
-<include file="../public/themes/RY/icr/foot.html" />
+<include file="./themes/RY/icr/foot.html" />
