--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
@@ -230,7 +230,7 @@
                 return false;
             }
             $.ajax({
-                'url':"",
+                'url':"{:url('course/bookCourse')}",
                 // 'data':{'name':phone_number,
                 //     'describe':phone_number,
                 //     'level':1,
