--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -1,4 +1,4 @@
-<include file="themes/RY/icr/head.html" />
+<include file="./themes/RY/icr/head.html" />
 <div class="main-img">
     <div class="img_list">
         <slides id="'1'">
@@ -175,14 +175,14 @@
         "<div class='input-text'>" +
         "<div class='course-level'>" +
         "<select>" +
-        "<option  hidden selected>预约试听课程级别</option>" +
-        "<option>{$category_list[0]['name']}课程适合2.5 ～ 7岁</option>" +
-        "<option>{$category_list[1]['name']}课程适合5 ～ 10岁</option>" +
-        "<option>{$category_list[2]['name']}课程适合8 ～14岁</option>" +
+        "<option value='-1'  hidden selected>预约试听课程级别</option>" +
+        "<option value='{$category_list[0]['id']}'>{$category_list[0]['name']}课程适合2.5 ～ 7岁</option>" +
+        "<option value='{$category_list[1]['id']}'>{$category_list[1]['name']}课程适合5 ～ 10岁</option>" +
+        "<option value='{$category_list[2]['id']}'>{$category_list[2]['name']}课程适合8 ～14岁</option>" +
         "</select>" +
         "<i class='fa fa-caret-down fa-2x'></i></div>"+
         "<input type='text' name='mobile_no' placeholder='输入手机号预约课程试听' />" +
-        "<input type='submit' onclick='yuyue(this)' value='确认预约试听'>" +
+        "<input type='button' onclick='yuyue(this)' value='确认预约试听'>" +
         "</div>" +
         "</form>" +
         "<div class='cease'>&times;</div>" +
@@ -208,26 +208,20 @@
         "<div class='cease'>&times;</div>" +
         "</div></div>";
 </script>
-<include file="../public/themes/RY/icr/foot.html" />
+<include file="./themes/RY/icr/foot.html" />
 <script type="text/javascript">
     // 百度地图API功能
     function yuyue(obj){
-        var phone =$(obj).nextAll("[name='mobile_no']").val();
+        var phone =$(obj).prevAll("[name='mobile_no']").val();
+        var level = $(obj).prevAll(".course-level").find('select').val();
         if(!phone){
             alert('请填写手机号');
         }
-        $.ajax({
-            'url':"{:url('course/bookCourse')}",
-            // 'data':{'name':phone_number,
-            //     'describe':phone_number,
-            //     'level':1,
-            //     'goal':phone_number,},
-            'data':{'phone':phone,},
-            'success':function(e){
-                alert("预约成功！")
-            }
-        })
-        return false;
+        if(level=='-1'||!level){
+            alert('请选择等级');
+        }
+        $.get("{:url('course/bookCourse')}",{'phone':phone,'level':level});
+        alert('预约成功!');
     }
     function mapini(city){
         //获取校区列表
