--- a/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
@@ -1,5 +1,5 @@
 <!--#include virtual="./head.html" -->
-<include file="../public/themes/RY/icr/head.html" />
+<include file="./themes/RY/icr/head.html" />
 <div class="main-img">
     <img src="/themes/RY/icr/imgs/banner4.jpg" />
 </div>
@@ -74,7 +74,7 @@
         "</select>" +
         "<i class='fa fa-caret-down fa-2x'></i></div>"+
         "<input type='text' name='mobile_no' placeholder='输入手机号预约课程试听' />" +
-        "<input type='submit' onclick='yuyue(this)' value='确认预约试听'>" +
+        "<input type='button' onclick='yuyue(this)' value='确认预约试听'>" +
         "</div>" +
         "</form>" +
         "<div class='cease'>&times;</div>" +
@@ -221,5 +221,5 @@
     }
     mapini('{$city_name}');
 </script>
-<include file="../public/themes/RY/icr/foot.html" />
+<include file="./themes/RY/icr/foot.html" />
 <!--#include virtual="./foot.html" -->
