--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -1,4 +1,4 @@
-﻿<div class="right_column">
+<div class="right_column">
     <div class="item">
         <img src="/themes/RY/icr/imgs/phone.png" />
         <span class="orange">电话咨询</span>
