--- a/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/home.html
@@ -144,7 +144,7 @@
                                         <span>{$vo.location}</span>
                                     </div>
                                     <div class="info-tel">Ph:15962808111/15962761999</div>
-                                    <div>电邮:zhongbanban@icanreaddasia.cn</div>
+                                    <div class='info-email'>电邮:zhongbanban@icanreaddasia.cn</div>
                                 </div>
 
                                 <div class="clear"></div>
