--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -15,7 +15,7 @@
                 <p>1995年，两人发现阅读的痛苦其实普遍存在于大多数的学生身上。而如果有阅读障碍的孩子也可以轻松地领略阅读的奥妙，那么更多的孩子也必定能从中受益。终于，在十五年的研究之后，他们两人决定开始全新的探索——成立 I Can Read。于是，这三个简单又生动的单词，成为了两人美好愿景下的品牌烙印。</p>
                 <p>作为一项系统、科学的阅读课程，I Can Read 很快被新加坡教育部推荐，独有的特色课程走进了20个小学的课堂。如今，I Can Read 的理念被越来越多的人所接受，适用于亚洲人的课程系统，让一个又一个 I Can Read 教学中心从地图上被点亮。</p>
 
-                <p>从 I Can Read 创立开始，十七年过去了，已经有超过25万孩子学习了 I Can Read 的课程，这是来自市场的肯定，也是 I Can Read 继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是 I Can Read 一个个新故事的延续。</p>
+                <p>从 I Can Read 创立开始，十八年过去了，已经有超过25万孩子学习了 I Can Read 的课程，这是来自市场的肯定，也是 I Can Read 继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是 I Can Read 一个个新故事的延续。</p>
             </div>
         </div>
     </div>
