--- a/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/about.html
@@ -1,4 +1,4 @@
-<include file="../public/themes/RY/icr/head.html" />
+<include file="./themes/RY/icr/head.html" />
 <!--#include virtual="./head.html" -->
 <div class="main-img">
     <img src="/themes/RY/icr/imgs/banner9.jpg" />
@@ -63,11 +63,13 @@
             <h1>联系我们</h1>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img1.svg" />
-                <div class="text">(+65)&nbsp;6591&nbsp;8743</div>
+                <div class="text">(+65) 6484 1271</div>
             </div>
             <div class="about-item">
-                <img src="/themes/RY/icr/imgs/contact_img2.svg" />
-                <div class="text">合作加盟</div>
+                <a target="_blank" href="http://www.icanread.asia/franchise/">
+                    <img src="/themes/RY/icr/imgs/contact_img2.svg" />
+                    <div class="text">合作加盟</div>
+                </a>
             </div>
             <div class="about-item">
                 <img src="/themes/RY/icr/imgs/contact_img3.svg" />
@@ -76,5 +78,5 @@
         </div>
     </div>
 </div>
-<include file="../public/themes/RY/icr/foot.html" />
+<include file="./themes/RY/icr/foot.html" />
 <!--#include virtual="./foot.html" -->
