--- a/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/foot.html
@@ -27,7 +27,7 @@
                         <li><a href="{:url(\'/icr/about\')}">关于我们</a></li>
                         <li><a href="{:url(\'/icr/teacher\')}">师资力量</a></li>
                         <li><a href="{:url(\'/icr/recruit\')}">人才招聘</a></li>
-                        <li><a href="{:url(\'/icr/join\')}">商务加盟</a></li>
+                        <li><a target="_blank" href="http://www.icanread.asia/franchise/">商务加盟</a></li>
                         <li><a href="{:url(\'/icr/school\')}">校区环境</a></li>
                         <li><a href="{:url(\'/icr/course\')}">课程内容</a></li>
                         <li><a href="{:url(\'/icr/school\')}">文化活动</a></li>
@@ -36,7 +36,6 @@
                 </div>
                 <div class="tel-phone">
                     <div class="tel-title">联系总部</div>
-                    <div class="tel-number">(+65)65918743</div>
                     <div class="tel-number">(+65)64841271</div>
                 </div>
                 <div class="clear"></div>
@@ -46,57 +45,50 @@
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/hk-flag.svg" />
-                            <span><a target="_blank" href="http://www.icanread.asia/hongkong/english">Hong Kong SAR</a></span>
-                            <span><a  target="_blank"  href="http://www.icanread.asia/hongkong/traditionalchinese">中国香港官网</a></span>
+                            <span style="font-family: PlutoSans">Hong Kong SAR</span>
+                            <span>中国香港官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/indonesia-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/indonesia/english">Indonesia</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/indonesia/bahasa%20indonesia">印度尼西亚官网</a></span>
+                            <span style="font-family: PlutoSans">Indonesia</span>
+                            <span>印度尼西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/malaysia-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/malaysia/english">Malaysia</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/malaysia/chinese">马来西亚官网</a></span>
+                            <span style="font-family: PlutoSans">Malaysia</span>
+                            <span>马来西亚官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/myanmar/english">Myanmar</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/myanmar/burmese">缅甸官网</a></span>
+                            <span style="font-family: PlutoSans">Myanmar</span>
+                            <span>缅甸官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/singapore-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/singapore/english">Singapore</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/singapore/english">新家坡官网</a></span>
+                            <span style="font-family: PlutoSans">Singapore</span>
+                            <span>新家坡官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/thailand-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/thailand/english">Thailand</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/thailand/thai">印度官网</a></span>
+                            <span style="font-family: PlutoSans">Thailand</span>
+                            <span>印度官网</span>
                         </div>
                     </li>
                     <li>
                         <div>
                             <img src="/themes/RY/icr/imgs/vietnam-flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/vietnam/english">Vietnam</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/vietnam/vietnamese">越南官网</a></span>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="/themes/RY/icr/imgs/Bangladesh_flag.svg" />
-                            <span><a target="_blank"  href="http://www.icanread.asia/bangladesh/english">Bangladesh</a></span>
-                            <span><a target="_blank"  href="http://www.icanread.asia/bangladesh/english">孟加拉官网</a></span>
+                            <span style="font-family: PlutoSans">Vietnam</span>
+                            <span>越南官网</span>
                         </div>
                     </li>
                 </ul>
@@ -203,4 +195,31 @@
                 <span>Australia</span>
                 <span>缅甸官网</span>
             </div>
-         
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+            <div class="country-item">
+                <img src="/themes/RY/icr/imgs/myanmar-flag.svg" />
+                <span>Australia</span>
+                <span>缅甸官网</span>
+            </div>
+        </div>
+    </div>
+</section>
+</body>
+<script src="/themes/RY/icr/js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="/themes/RY/icr/js/vendor/jquery-3.3.1.min.js"></script>
+<script src="/themes/RY/icr/js/main.js"></script>
+</html>
