--- a/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/school.html
@@ -61,8 +61,8 @@
 <script type="text/javascript">
     var popup_html="<div id='popup' class='popup'>" +
         "<div class='wd'>" +
-        "<div class='wd-title'>免费预约试听</div>" +
-        "<div class='wd-title2'>思明中心：厦门市思明区莲前西路2号莲富大厦3H</div>" +
+        "<div class='wd-title3'>免费预约试听</div>" +
+        "<div class='wd-title4'>思明中心：厦门市思明区莲前西路2号莲富大厦3H</div>" +
         "<form>" +
         "<div class='input-text'>" +
         "<div class='course-level'>" +
