--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/head.html
@@ -44,6 +44,25 @@
             "<div class='cease'>&times;</div>" +
             "</div>" +
             "</div>";
+        var open_time_html="<div id='popup2' class='popup'>" +
+            "<div class='wd opentime'>" +
+            "<div class='wd-title3'>思明校区</div>" +
+            "<div class='wd-title4'>广州市番禺区洛溪新城北环路83号渔人码头·溪新城北环路83号城北环路83号渔人码头·渔人码头·溪新城北环路83号渔人码头·</div>" +
+            "<div class='open_time'>" +
+            "<div class='time_title'>营业时间</div>" +
+            "<div class='time_content'>" +
+            "<p>周一:    10:00am – 8:00pm</p>" +
+            "<p>周二:    休息</p>" +
+            "<p>周三:    休息</p>" +
+            "<p>周四:    10:00am – 8:00pm</p>" +
+            "<p>周五:    10:00am – 8:00pm</p>" +
+            "<p>周六:    8:30am – 6:30pm</p>" +
+            "<p>周日:    8:30am – 6:30pm</p>" +
+            "<p>公共假期:休息</p>" +
+            "</div>" +
+            "</div>" +
+            "<div class='cease'>&times;</div>" +
+            "</div></div>";
     </script>
     <link href="/themes/icr_wap/icr/css/style.css" rel="stylesheet" type="text/css"/>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
