--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
@@ -9,8 +9,8 @@
                 </div>
                 <div class="reservation">
                     <img src="/themes/icr_wap/icr/imgs/bj-img.svg" />
-                    <input type="text" placeholder="输入手机号预约课程试听" />
-                    <input type="button" value="免费预约试听" />
+                    <input type="text" name="phone" placeholder="输入手机号预约课程试听" />
+                    <input type="button" name="yy_submit" value="免费预约试听" />
                     <div class="agreement">
                         <i class="fa fa-square-o"></i>
                         <a href="{:url('/icr/user_agreement')}">同意《 I CAN READ 用户协议》</a>
@@ -60,7 +60,7 @@
                         <div class="h1">我们的专业优势</div>
                         <div class="adv-item">
                             <div class="adv-item-img"><img src="/themes/icr_wap/icr/imgs/adv-1-img.svg"></div>
-                            <div class="adv-item-p">ICR教育系统通过<br/>
+                            <div class="adv-item-p">ICR&nbsp;&nbsp;教育系统通过<br/>
                                 资深教育心理学专家<br/>
                                 研究长达15年
                             </div>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="adv-item">
                             <div class="adv-item-img"><img src="/themes/icr_wap/icr/imgs/adv-4-img.svg"></div>
-                            <div class="adv-item-p">小班教学不超过8人
+                            <div class="adv-item-p">小班教学不超过12人
                                 让每一个孩子都得到足够的关照
                             </div>
                         </div>
@@ -105,8 +105,8 @@
                                     <i class="fa fa-caret-down fa-2x"></i>
                                 </div>
                                 <div class="submit">
-                                    <input type="text" id="phone" placeholder="请输入您的手机号" />
-                                    <input type="submit" id="yy_submit" value="预约免费测试">
+                                    <input type="text" name="phone" placeholder="请输入您的手机号" />
+                                    <input type="button" name="yy_submit" value="预约免费测试">
                                 </div>
                             </div>
                     </div>
@@ -170,14 +170,19 @@
             function editInfo(data){
                 var html ="                            <div class=\"school_info\">\n" +
                     "                                <div class=\"name\">"+data['name']+"</div>\n" +
-                    "                                <div class=\"position\">\n" +
+                    "                                <div class=\"position\">" +
                     "                                    <i class=\"fa fa-map-marker\"></i>\n" +
-                    "                                    <div>"+data['location']+"</div>\n" +
+                    "<div>" +
+                    "                                    <p>"+data['location']+"</p>" +
+                    "                                    <p>Ph:"+data['phone']+"</p>" +
+                    "                                    <p>电邮:"+data['email']+"</p></div>" +
                     "                                </div>\n" +
-                    "                                <div class=\"position-submit\" name=\"yy\">免费预约试听</div>\n" +
+                    "                                <div class=\"opening-hours\" name=\"open_time\" data-name='"+data['name']+"' data-position='"+data['location']+"' data-time_content='"+data['open_hours']+"'>校区开放时间</div>\n" +
+                    "                                <div class=\"position-submit\" name=\"yy\"  data-name='"+data['name']+"' data-position='"+data['location']+"'>免费预约试听</div>\n" +
                     "                            </div>";
                 $(".school_reservation").append(html);
                 $("[name='yy']").click(popup);
+                $("[name='open_time']").click(popup2);
             }
             var map = new BMap.Map("map");
             $.get("{:url('index/getSchoolList')}?city="+city,function(e){
@@ -204,22 +209,15 @@
             $(".video").show();
             $(".video video").trigger("play")
         })
-        $("#yy_submit").on('click',function(){
-            var phone =$("#phone").val();
+        $("[name='yy_submit']").on('click',function(){
+            var phone = $(this).prevAll("[name='phone']").val();
             if(!phone){
                 alert('请填写手机号');
+                return false;
             }
-            $.ajax({
-                'url':"",
-                // 'data':{'name':phone_number,
-                //     'describe':phone_number,
-                //     'level':1,
-                //     'goal':phone_number,},
-                'data':{'phone':phone,},
-                'success':function(e){
-                    alert("预约成功！")
-                }
-            })
+            $.get("{:url('course/bookCourse')}",{'phone':phone},function(){
+                alert('预约成功!');
+            });
             return false;
         })
         $(".input_button").on('click',function(){
