icr_wap home trial fix

--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/home.html
@@ -146,7 +146,7 @@
                                     <i class="fa fa-map-marker"></i>
                                     <div>厦门市思明区莲前西路2号莲富大厦3H</div>
                                 </div>
-                                <div class="position-submit" name="yy">免费预约试听</div>
+                                <div class="position-submit" name="yy">免想费预约试听</div>
                             </div>
                         </div>
                     </div>
@@ -193,6 +193,7 @@
                     "                                    <i class=\"fa fa-map-marker\"></i>\n" +
                     "                                    <div>"+data['location']+"</div>\n" +
                     "                                </div>\n" +
+                    "                                <div class=\"opening-hours\" onclick=\"\">校区开放时间</div>\n" +
                     "                                <div class=\"position-submit\" name=\"yy\">免费预约试听</div>\n" +
                     "                            </div>";
                 $(".school_reservation").append(html);
