--- a/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/head.html
@@ -10,6 +10,8 @@
     <include file="public@head"/>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="/themes/RY/icr/css/main.css" rel="stylesheet"/>
+    <script type="text/javascript" charset="utf-8" src="__STATIC__/js/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="__STATIC__/js/ueditor/ueditor.all.min.js"> </script>
 </head>
 <body>
 <!--[if lte IE 9]>
