--- a/thinkcmf-5.0.180626/public/themes/RY/icr/activity.html
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/activity.html
@@ -8,7 +8,7 @@
         <div class="activity">
             <div class="h1">校区环境</div>
             <div class="activity_content">
-
+                    {$activity.desc|htmlspecialchars_decode|stripslashes}
             </div>
         </div>
     </div>
