--- a/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/activity/add.html
+++ b/thinkcmf-5.0.180626/public/themes/admin_simpleboot3/admin/activity/add.html
@@ -1,4 +1,6 @@
 <include file="public@header"/>
+    <script type="text/javascript" charset="utf-8" src="__STATIC__/js/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" charset="utf-8" src="__STATIC__/js/ueditor/ueditor.all.min.js"> </script>
 </head>
 <body>
 <div class="wrap js-check-wrap">
@@ -23,12 +25,6 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <label class="col-sm-2 control-label">活动介绍:</label>
-            <div class="col-md-6 col-sm-10">
-                <input type="text" class="form-control" name="desc" value="">
-            </div>
-        </div>
 
         <div class="form-group">
             <label class="col-sm-2 control-label">封面URL:</label>
@@ -37,6 +33,15 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label class="col-sm-2 control-label">活动介绍:</label>
+            <div class="col-md-6 col-sm-10">
+                <!--<input type="text" class="form-control" name="desc" value="">-->
+                <textarea  type="text"  name="desc" id="EditorId" placeholder="请输入内容"></textarea>
+            </div>
+        </div>
+
+
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary js-ajax-submit">{:lang("SAVE")}</button>
             <a class="btn btn-default" href="{:url('activity/index',['sid'=>$sid])}">返回</a>
@@ -44,6 +49,22 @@
     </form>
 
 </div>
-<script src="__STATIC__/js/admin.js"></script>
+<script type="text/javascript" charset="utf-8">//初始化编辑器
+    window.UEDITOR_HOME_URL = "__PUBLIC__/ueditor/";//配置路径设定为UEditor所放的位置
+    window.onload=function(){
+        window.UEDITOR_CONFIG.initialFrameHeight=400;//编辑器的高度
+        window.UEDITOR_CONFIG.initialFrameWidth=686;//编辑器的宽度
+        var editor = new UE.ui.Editor({
+            imageUrl : '',
+            fileUrl : '',
+            imagePath : '',
+            filePath : '',
+            imageManagerUrl:'', //图片在线管理的处理地址
+            imageManagerPath:'__ROOT__/'
+        });
+        editor.render("EditorId");//此处的EditorId与<textarea name="content" id="EditorId">的id值对应 </textarea>
+    }
+</script>
+
 </body>
 </html>
