--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/activity.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/activity.html
@@ -8,7 +8,7 @@
     <div class="main">
         <div class="item">
             <div class="h1">活动详情</div>
-            <div class="activity_content">
+            <div style="width: 7rem;margin: 0 auto">
                 {$activity.desc|htmlspecialchars_decode|stripslashes}
             </div>
         </div>
