--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/about.html
@@ -2,7 +2,7 @@
 <section id="content">
     <div class="slide">
         <ul>
-            <li><img src="/themes/icr_wap/icr/imgs/banner-3.jpg"></li>
+            <li><img src="/themes/icr_wap/icr/imgs/banner-gy.jpg"></li>
         </ul>
     </div>
     <div class="main">
@@ -17,7 +17,7 @@
                 <br />
                 <p>作为一项系统、科学的阅读课程，I Can Read很快被新加坡教育部推荐，独有的特色课程走进了20个小学的课堂。如今，I Can Read的理念被越来越多的人所接受，适用于亚洲人的课程系统，让一个又一个I Can Read教学中心从地图上被点亮。</p>
                 <br />
-                <p>从I Can Read创立开始，十七年过去了，已经有超过25万孩子学习了I Can Read的课程，这是来自市场的肯定，也是I Can Read继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是I Can Read一个个新故事的延续。</p>
+                <p>从I Can Read创立开始，十八年过去了，已经有超过25万孩子学习了I Can Read的课程，这是来自市场的肯定，也是I Can Read继续前行的动力。一个个孩子不断发出“I Can Read”的音节，那是我们彼此都倍感欣慰的时刻，也是I Can Read一个个新故事的延续。</p>
             </div>
         </div>
     </div>
